# Codex-shitshow

./: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.in  requirements.txt
accounts/: backends.py  forms.py  middleware.py  models.py  urls.py  views.py
audit/: admin.py  middleware.py  models.py  services.py
budgets/: forms.py  models.py  urls.py  views.py
catalog/: admin.py  models.py
common/: context_processors.py  decorators.py  logging.py  middleware.py  models.py  views.py
config/: settings.py  urls.py
deploy/: external-proxy-nginx.example.conf  mealhouse-backup.service  mealhouse-backup.timer  mealhouse-scheduler.service  mealhouse-scheduler.timer  mealhouse-web.service  mealhouse-worker.service  nginx-mealhouse.conf
docs/: ARCHITECTURE.md  CODEX_PROGRESS.md  DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_AUDIT.md  INTEGRATIONS.md  OPERATIONS.md  PRIVACY.md  REFERENCE.md  SECURITY.md  TROUBLESHOOTING.md  USER_GUIDE.md
households/: apps.py  forms.py  models.py  urls.py  views.py
inventory/: forms.py  models.py  services.py  urls.py  views.py
notifications/: mail.py  models.py  services.py  urls.py  views.py
offers/: admin.py  forms.py  models.py  providers.py  salling.py  services.py  urls.py  views.py
operations/: admin.py  models.py  services.py  urls.py  views.py
planning/: apps.py  forms.py  models.py  services.py  urls.py  views.py
recipes/: forms.py  models.py  services.py  urls.py  views.py
scripts/: backup.sh  restore.sh  rollback.sh  (+1 more)
(+106 files in other folders)
